--- a/index.html
+++ b/index.html
@@ -368,20 +368,33 @@
               </button>
               <div class="accordion-content">
                 <p>
-                  If you're an AI company interested in exploring a new
-                  direction for your agent development — with potential for
-                  funding or acquisition talks based on a technical white paper
-                  detailing my complete framework and architecture — please get
-                  in touch. To protect my IP, I can’t discuss specifics outside
-                  of NDA-based discussions, and only with parties capable of
-                  genuine funding or acquisition interest.
+                  Whilst I have single-handedly written and compiled a
+                  work-in-progress, albeit technically-complete, PhD-worthy
+                  White Paper, the reality is that currently I cannot realise my
+                  vision alone, as I have neither the funding nor the technical
+                  proficiency to execute this with the necessary ongoing
+                  resources or technical support to setup and maintain the
+                  required infrastructure, that such a potentially
+                  ground-breaking framework deserves.
+                </p>
+                <p>
+                  If you're an AI company interested in exploring a new or
+                  additional direction for your agent development — with
+                  potential for funding or acquisition talks based on the
+                  aforementioned technical white paper detailing my complete
+                  framework and architecture — please get in touch. To protect
+                  my IP, I can’t discuss specifics outside of NDA-based
+                  discussions, and only with parties capable of genuine funding
+                  or acquisition interest.
                 </p>
                 <p>
                   My white paper contains everything I’ve developed to date —
                   theory, frameworks, computational models, systems of
                   personality, governance and ethics, and includes intricate
                   technical architecture, implementation and deployment plans
-                  for a commercially-viable proof of concept.
+                  for a commercially-viable proof of concept, in addition to
+                  full configuration specifications — basically EVERYTHING
+                  required to build a PoC.
                 </p>
               </div>
             </div>
