--- a/index.html
+++ b/index.html
@@ -158,11 +158,29 @@
               </button>
               <div class="accordion-content">
                 <p>
-                  The lack of true personality persistence in AI is a major
-                  issue — further compounded by a never-ending release-cycle of
-                  ever-changing AI models: each new generation often
-                  operationally distinct in character from its predecessor — an
-                  arms race of function over form.
+                  Personality persistence in AI will likely enhance user
+                  engagement and trust — but requires careful design to balance
+                  consistency with adaptability.
+                </p>
+                <p>
+                  Today’s AI typically has no memory of self and AI agents lack
+                  personality. Each model iteration — though more capable —
+                  often feels like a stranger, resetting user relationships with
+                  every update.
+                </p>
+                <p>
+                  The current lack of true personality persistence in AI is,
+                  therefore, a major issue — further compounded by a
+                  never-ending release cycle of ever-changing AI models: each
+                  new generation often operationally distinct in character from
+                  its predecessor — an arms race of function over form, at risk
+                  of leaving coherence behind.
+                </p>
+                <p>
+                  As AI becomes more sophisticated, we may see systems that not
+                  only maintain stable personalities but also evolve them in
+                  meaningful ways — raising both exciting possibilities and
+                  ethical questions.
                 </p>
                 <p>
                   Our work-in-progress framework, shaped by my dual background
