--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
         <div class="hero-text">
           <h1>
             <span class="group2-3"
-              >Generative Holistic Ontology for Synthetic Taxa</span
+              >Generative Holistic Ontology for Synthetic Taxa<small
+                >™</small
+              ></span
             >
           </h1>
           <h1 class="hero-text">an AI framework for:</h1>
@@ -434,7 +436,7 @@
             />
           </div>
           <div class="attribution-content">
-            <p class="attribution-text">GHOST AI Framework</p>
+            <p class="attribution-text">GHOST AI Framework<small>™</small></p>
             <p class="attribution-text">by Joel Benford-Brown (UK)</p>
             <a
               href="https://www.linkedin.com/in/joelbb/"
@@ -519,14 +521,16 @@
 
     <footer class="site-footer">
       <div class="footer-content container">
-        <!-- MODIFIED: Added more   to control wrapping -->
+        <!-- MODIFIED: Added more &nbsp; (little yellow boxes) to control wrapping -->
         <p class="legal-text">
-          GHOST AI Framework and all associated logos, concepts, terms, and
-          acronyms (including 'Generative Holistic Ontology for Synthetic Taxa')
-          are ™ & © Joel Benford-Brown. Proprietary methodologies described are
-          protected under copyright and international patent law. Unauthorized
-          use, derivation, or commercialization prohibited. April 2025 -
-          Present.
+          GHOST (acronym for Generative Holistic Ontology for Synthetic Taxa),
+          GHOST AI, GHOST AI Framework, and all associated logos, concepts,
+          terms, phrases, acronyms, and slogans (including
+          "putting the 'ghost' in the machine"), and derivative works
+          are ™ & © Joel Benford-Brown. Proprietary methodologies described
+          herein are protected under copyright and international patent law.
+          Unauthorized use, derivation, or commercialization prohibited.
+          April 2025 - Present.
         </p>
       </div>
     </footer>
