--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       <div class="footer-content container">
         <!-- MODIFIED: Added more &nbsp; (little yellow boxes) to control wrapping -->
         <p class="legal-text">
-          GHOST (acronym for Generative Holistic Ontology for Synthetic Taxa),
+          GHOST (acronym for 'Generative Holistic Ontology for Synthetic Taxa'),
           GHOST AI, GHOST AI Framework, and all associated logos, concepts,
           terms, phrases, acronyms, and slogans (including
           "putting the 'ghost' in the machine"), and derivative works
