--- a/index.html
+++ b/index.html
@@ -524,13 +524,13 @@
         <!-- MODIFIED: Added more &nbsp; (little yellow boxes) to control wrapping -->
         <p class="legal-text">
           GHOST (acronym for 'Generative Holistic Ontology for Synthetic Taxa'),
-          GHOST AI, GHOST AI Framework, and all associated logos, concepts,
-          terms, phrases, acronyms, and slogans (including
+          GHOST AI Framework, and all associated logos, concepts, terms,
+          phrases, acronyms, and slogans (including
           "putting the 'ghost' in the machine"), and derivative works
           are ™ & © Joel Benford-Brown. Proprietary methodologies described
           herein are protected under copyright and international patent law.
-          Unauthorized use, derivation, or commercialization prohibited.
-          April 2025 - Present.
+          All Rights Reserved. Unauthorized use, derivation,
+          or commercialization prohibited.
         </p>
       </div>
     </footer>
