--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   responsible interaction.
                 </p>
                 <p>
-                  GHOST AI represents a new direction in AI development, putting
+                  GHOST represents a new direction in AI development, putting
                   the “ghost” in the machine by prioritising authentic being
                   over mere function, and focusing on addressing the critical
                   gap of personality persistence in AI by building ethical,
