--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <!-- Theme color updates dynamically via JS -->
     <meta
       name="theme-color"
-      content="#f8f9fa"
+      content="#FFFFFF"
       media="(prefers-color-scheme: light)"
     />
     <meta
       name="theme-color"
-      content="#000000"
+      content="#1E1E1E"
       media="(prefers-color-scheme: dark)"
     />
 
@@ -84,6 +84,8 @@
     <!-- JS at end of body -->
   </head>
   <body>
+    <!-- first line below is bokeh container code / no further bokeh code in html file -->
+    <div class="bokeh-container" id="bokeh-container"></div>
     <header class="site-header">
       <div class="header-controls container">
         <div class="theme-switch-wrapper">
