--- a/index.html
+++ b/index.html
@@ -498,26 +498,35 @@
         </div>
       </section>
 
-      <div class="back-to-top-container container">
-        <button
-          id="backToTopBtnStatic"
-          class="back-to-top-static"
-          title="Go to top"
-          aria-label="Scroll to top"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            viewBox="0 0 16 16"
+      <div style="position: relative">
+        <div class="centred-text-container container">
+          <p class="centred-text">
+            Privacy Policy: This site uses only essential session cookies;
+            no tracking or personal data collection.
+          </p>
+        </div>
+
+        <div class="back-to-top-container container">
+          <button
+            id="backToTopBtnStatic"
+            class="back-to-top-static"
+            title="Go to top"
+            aria-label="Scroll to top"
           >
-            <path
-              fill-rule="evenodd"
-              d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"
-            />
-          </svg>
-        </button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
     </main>
 
