--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     <!-- Theme color updates dynamically via JS -->
     <meta
       name="theme-color"
-      content="#ffffff"
+      content="#FDF9F2"
       media="(prefers-color-scheme: light)"
     />
     <meta
       name="theme-color"
-      content="#1e1e1e"
+      content="#1E1E1E"
       media="(prefers-color-scheme: dark)"
     />
 
