--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
               <div class="accordion-content">
                 <p>
                   The <strong>GHOST AI Framework</strong> is pioneering
-                  synthetic sentience by engineering a taxonomic ecosystem of
-                  ontological being via a foundational psychocognitive
-                  architectural framework forged from first principles and
-                  responsible for generating unique, adaptive digital beings
-                  with persistent identities, agency, and evolving
-                  self-authorship.
+                  synthetic sentience and a model of artificial personality by
+                  engineering a taxonomic ecosystem of ontological being via a
+                  foundational psychocognitive architectural framework forged
+                  from first principles and responsible for generating unique,
+                  adaptive digital beings with persistent identities, agency,
+                  and evolving self-authorship.
                 </p>
               </div>
             </div>
