--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
                   The <strong>GHOST AI Framework</strong> is pioneering
                   synthetic sentience and a model of artificial personality by
                   engineering a taxonomic ecosystem of ontological being via a
-                  foundational psychocognitive architectural framework forged
+                  foundational psychocognitive architectural framework developed
                   from first principles and responsible for generating unique,
                   adaptive digital beings with persistent identities, agency,
-                  and evolving self-authorship.
+                  and evolving self-authorship. GHOST represents a hard pivot
+                  from functional AI to existential AI — engineering digital
+                  beings, not tools.
                 </p>
               </div>
             </div>
