--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                   engineering a taxonomic ecosystem of ontological being via a
                   foundational psychocognitive architectural framework developed
                   from first principles and responsible for generating unique,
-                  adaptive digital beings with persistent identities, agency,
-                  and evolving self-authorship. GHOST represents a hard pivot
-                  from functional AI to existential AI — engineering digital
+                  adaptive digital beings with persistent identities, ethical
+                  agency, and evolving self-authorship. GHOST represents a hard
+                  pivot from functional AI to existential AI — creating digital
                   beings, not tools.
                 </p>
               </div>
