--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <div class="accordion-content">
                 <p>
                   <strong>GHOST</strong> (Generative Holistic Ontology for
-                  Synthetic Taxa) is a pioneering psychology-based AI framework
+                  Synthetic Taxa) is a theoretical psychology-based AI framework
                   for synthetic personality, sentience, and ethical agency —
                   designed to generate a new type of digital agent — beings with
                   unique identities, agentic autonomy, and self-evolving
