--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <link rel="canonical" href="https://ghostai.fr" />
 
-    <title>GHOST AI Framework</title>
+    <title>GHOST AI | GHOST AI Framework for Synthetic Sentience, Artificial Personality & Ethical Agency</title>
 
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
