--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               <div class="accordion-content">
                 <p>
                   Whilst I have single-handedly written and compiled a
-                  work-in-progress, albeit technically-complete, PhD-worthy
+                  work-in-progress and hopefully PhD-worthy
                   White Paper, the reality is that currently I cannot realise my
                   vision alone, as I have neither the funding nor the technical
                   proficiency to execute this with the necessary ongoing
@@ -410,9 +410,9 @@
                   or acquisition interest.
                 </p>
                 <p>
-                  My white paper contains everything I’ve developed to date —
+                  My white paper will contain everything I’ve developed to date —
                   theory, frameworks, computational models, systems of
-                  personality, governance and ethics, and includes intricate
+                  personality, governance and ethics, and include intricate
                   technical architecture, implementation and deployment plans
                   for a commercially-viable proof of concept, in addition to
                   full configuration specifications — basically EVERYTHING
