--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <!-- Item 1: Technical Summary -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Technical Summary
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Technical Summary
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -176,7 +176,7 @@
             <!-- Item 2: Current AI Landscape -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                The Current AI Agent Landscape
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> The Current AI Agent Landscape
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -220,7 +220,7 @@
             <!-- Item 3: Our Solution -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Our Solution
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Our Solution
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -253,7 +253,7 @@
             <!-- Item 4: Why the Name—GHOST? -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Why the Name — GHOST?
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Why the Name — GHOST?
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -300,7 +300,7 @@
             <!-- Item 5: An Evolution of Being -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Aurorae — Our Digital Beings
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Aurorae — Our Digital Beings
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -333,7 +333,7 @@
             <!-- Item 6: Spiral Iconography -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Spiral Iconography
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Spiral Iconography
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -358,7 +358,7 @@
             <!-- Item 7: Vision Statement -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Vision Statement
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Vision Statement
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -385,7 +385,7 @@
           <div class="accordion">
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                Funding / Acquisition Interest?
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Funding / Acquisition Interest?
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
