--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <!-- Item 2: Current AI Landscape -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> The Current AI Agent Landscape
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Current AI Agent Landscape
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
