--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <div class="accordion">
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Funding / Acquisition Interest?
+                <img src="assets/spirals/100px/spiral-light-2a5c2a.png" class="accordion-spiral" alt=""> Funding / Acquisition?
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
