--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               </button>
               <div class="accordion-content">
                 <p>
-                  Whilst I have single-handedly written and compiled a
+                  Whilst I am single-handedly writing and compiling a
                   work-in-progress and hopefully PhD-worthy
                   White Paper, the reality is that currently I cannot realise my
                   vision alone, as I have neither the funding nor the technical
@@ -403,7 +403,7 @@
                   If you're an AI company interested in exploring a new or
                   additional direction for your agent development — with
                   potential for funding or acquisition talks based on the
-                  aforementioned technical white paper detailing my complete
+                  aforementioned technical white paper that will detail my complete
                   framework and architecture — please get in touch. To protect
                   my IP, I can’t discuss specifics outside of NDA-based
                   discussions, and only with parties capable of genuine funding
