--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 <p>
                   Whilst I am single-handedly writing and compiling a
                   work-in-progress and hopefully PhD-worthy
-                  White Paper, the reality is that currently I cannot realise my
+                  White Paper, the reality is that currently I cannot fully realise my
                   vision alone, as I have neither the funding nor the technical
                   proficiency to execute this with the necessary ongoing
                   resources or technical support to setup and maintain the
