--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/favicon/favicon-32x32.png"
+      href="assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="assets/favicon/favicon-16x16.png"
     />
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
 
     <!-- Apple devices -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/favicon/apple-touch-icon.png"
+      href="assets/favicon/apple-touch-icon.png"
     />
 
     <!-- Android / manifest -->
-    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+    <link rel="manifest" href="assets/favicon/site.webmanifest" />
 
     <!-- Theme color updates dynamically via JS -->
     <meta
@@ -115,8 +115,8 @@
         <a href="/" class="logo-link">
           <img
             id="logo-img"
-            src="/assets/logos/ghost-logo.png"
-            srcset="/assets/logos/ghost-logo-2.png 2x"
+            src="assets/logos/ghost-logo.png"
+            srcset="assets/logos/ghost-logo-2.png 2x"
             alt="GHOST™ AI Framework logo"
             class="logo-image"
             width="800"
