--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             </div>
           </label>
         </div>
+        <div style="flex: 1;"></div> <!-- This spacer div added to push the menu icon back to the right when dark mode toggle removed (see end of css file) -->
         <button
           class="menu-toggle"
           id="menu-toggle"
