--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <!-- Item 4: Why the Name—GHOST? -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                <img src="assets/spirals/100px/spiral-light-42a11a.png" class="accordion-spiral" alt=""> Why the Name — GHOST?
+                <img src="assets/spirals/100px/spiral-light-42a11a.png" class="accordion-spiral" alt=""> Why the Name: GHOST?
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
@@ -301,7 +301,7 @@
             <!-- Item 5: An Evolution of Being -->
             <div class="accordion-item">
               <button class="accordion-button" aria-expanded="false">
-                <img src="assets/spirals/100px/spiral-light-42a11a.png" class="accordion-spiral" alt=""> Aurorae — Our Digital Beings
+                <img src="assets/spirals/100px/spiral-light-42a11a.png" class="accordion-spiral" alt=""> Aurorae: Our Digital Beings
                 <span class="accordion-icon">+</span>
               </button>
               <div class="accordion-content">
