--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Primary Meta Tags -->
     <meta
       name="description"
-      content="GHOST AI Framework: Psychology-based computational model for generating AI agents with synthetic sentience, persistent personalities and ethical agency."
+      content="GHOST AI is a psychology-based theoretical framework for generating AI agents with persistent personalities, synthetic sentience and ethical agency."
     />
 
     <meta name="author" content="Joel Benford-Brown" />
@@ -54,7 +54,7 @@
 
     <link rel="canonical" href="https://ghostai.fr" />
 
-    <title>GHOST AI | GHOST AI Framework for Synthetic Sentience, Artificial Personality & Ethical Agency</title>
+    <title>GHOST AI Framework for Artificial Personality, Synthetic Sentience & Ethical Agency</title>
 
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
