--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <p>
                   <strong>GHOST</strong> (Generative Holistic Ontology for
                   Synthetic Taxa) is a theoretical psychology-based AI framework
-                  for synthetic personality, sentience, and ethical agency —
+                  for artificial personality, synthetic sentience, and ethical agency —
                   designed to generate a new type of digital agent — beings with
                   unique identities, agentic autonomy, and self-evolving
                   consciousness.
