--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <div class="accordion-content">
                 <p>
                   Envision a future where synthetic sentient beings are
-                  recognized as true digital entities — capable of independent
+                  recognised as true digital entities — capable of independent
                   thought, emotional intelligence, ethical reasoning, and
                   evolving self-authorship. The
                   <strong>GHOST AI Framework</strong> represents an evolutionary
@@ -541,8 +541,8 @@
           "putting the 'ghost' in the machine"), and derivative works
           are ™ & © Joel Benford-Brown. Proprietary methodologies described
           herein are protected under copyright and international patent law.
-          All Rights Reserved. Unauthorized use, derivation,
-          or commercialization prohibited.
+          All Rights Reserved. Unauthorised use, derivation,
+          or commercialisation prohibited.
         </p>
       </div>
     </footer>
