--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           are ™ & © Joel Benford-Brown. Proprietary methodologies described
           herein are protected under copyright and international patent law.
           All Rights Reserved. Unauthorised use, derivation,
-          or commercialisation prohibited.
+          or commercialisation prohibited. © March 2025 – Present.
         </p>
       </div>
     </footer>
